[UPD] angular pj directory

--- a/Angular/docker/node/Dockerfile
+++ b/Angular/docker/node/Dockerfile
@@ -1,6 +1,6 @@
 FROM node
 
-WORKDIR /usr/game
+WORKDIR /root/game
 
 RUN npm install @angular-devkit/build-angular
 RUN npm install -g @angular/cli
