--- a/Angular/docker-compose.yml
+++ b/Angular/docker-compose.yml
@@ -6,5 +6,5 @@ services:
     ports: 
       - "4200:4200"
     volumes: 
-      - "./server:/usr/game"
+      - "./server:/root/game"
     tty: true
