--- a/lowlayerPJT/Dockerfile
+++ b/lowlayerPJT/Dockerfile
@@ -2,3 +2,5 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install -y build-essential cmake clang libssl-dev vim
+RUN sudo apt-get install -y python3
+RUN sudo apt install -y python3-pip
