--- a/wantdly/docker-compose.yml
+++ b/wantdly/docker-compose.yml
@@ -1,25 +1,29 @@
-version: '3'
-services: 
-    go:
-        build: 
-            context: .
-            dockerfile: DockerFile
-        stdin_open: true
-        tty: true
-        volumes: 
-            - .:/home/app
-        ports: 
-            - 80:80
-    db:
-        image: mysql:8.0
-        environment: 
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: keep_cards
-            MYSQL_USER: shiho
-            MYSQL_PASSWORD: Nr5kThXz
-            TZ: 'Asia/Tokyo'
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-        volumes:
-            - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
-        ports:
-            - 3306:3306
+version: "3"
+
+services:
+  db:
+    build: ./mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: shiho
+      MYSQL_PASSWORD: vt41zkTR
+      TZ: Asia/Tokyo
+    volumes:
+      - ./mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
+
+  web:
+    build: .
+    tty: true
+    environment:
+      DB_USER: shiho
+      DB_PASSWORD: vt41zkTR
+      DB_HOST: db
+      DB_PORT: 3306
+      DB_NAME: keep_cards
+      DB_LOC: Asia%2FTokyo
+    volumes:
+      - "./app:/app"
+    depends_on:
+      - db
